# OptiQRoute

./: .gitignore  100_locations.csv  100c.py  100q.py  CC.py  CVQ.py  CVQ2.py  Cargo.toml  Classical_computing.py  INTEGRATION_GUIDE.md  QC.py  Quantum_Computing.py  README.md  app.py  comp.py  example_solution.json  large_test_dataset.csv  map_dataset_100 (1).csv  quantum.py  quantum_full.py  quantum_integrated.py  quantum_simple.py  quantum_vrp.py  quick_test.py  rust_vrp_bridge.py  sample_route_data.csv  test2.py  test_comparison.py  test_fixed_quantum.py  test_input.json  test_output.json  test_qiskit.py  test_quantum.py  test_realistic_quantum.py  test_temp.csv
#/: pyvenv.cfg
3.11/: pyvenv.cfg
Python/: pyvenv.cfg
a/: pyvenv.cfg
classical using rust/: Cargo.toml  handlers.rs  solver.rs
classical using rust/src/: app_state.rs  cli_main.rs  lib.rs  validate.rs
classical_vrp_solver/: Cargo.toml  Classical_VRP_Research_Reference.md  SHUTTLE_DEPLOYMENT.md  Shuttle.toml  example_solution.csv  osm_routes_visualization.geojson  planet_83_solution.json  prototype.md  solution.json  test_solve_clarke_wright.json  test_solve_greedy.json  test_vrp_generate.json  vizag.osm.pbf  web_server.md
classical_vrp_solver/src/: main.rs  utils.rs
clean/: pyvenv.cfg
creates/: pyvenv.cfg
environment/: pyvenv.cfg
optiqroute-frontend/: package-lock.json  package.json
optiqroute-frontend/src/: App.css  App.js  output.css
optiqroute-frontend/src/components/: ComparisonMode.css  ComparisonMode.js  LocationSearchInput.css  LocationSearchInput.js  MapClickHandler.js
optiqroute-frontend/src/hooks/: useLocationSearch.js
optiqroute-frontend/src/services/: locationStorage.js
qiskit_env/: pyvenv.cfg
src/: lib.rs  types.rs
vrp_solver/: AQH.pptx  Cargo.toml  README.md  beginner_guide.md  example_instance.json  osm_vrp_instance.json  planet_83.2932,17.7118_83.3388,17.7502.osm.pbf.json  planet_83_routes.geojson  prototype_workflow.md  routes_snapped.geojson  test.osm.pbf  test_mapping.json  test_planet_routes.geojson  test_solve_multi_start.json  webserver_prototype.md
vrp_solver/src/: api_types.rs  distance.rs  handlers.rs  lib.rs  main.rs  osm_parser.rs
with/: pyvenv.cfg
