[package]
name = "vrp_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Optional server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
rand = "0.8"

[dependencies.shuttle-axum]
version = "0.40"
optional = true

[dependencies.shuttle-runtime]
version = "0.40"
optional = true

[features]
default = ["cli"]
cli = []
server = ["shuttle-axum", "shuttle-runtime"]

[[bin]]
name = "vrp_cli"
path = "src/bin/vrp_cli.rs"

[[bin]]
name = "vrp_server"
path = "src/main.rs"
required-features = ["server"]

[lib]
name = "vrp_solver"
path = "src/lib.rs"
