[package]
name = "vrp_solver"
version = "0.1.0"
edition = "2021"
description = "A Vehicle Routing Problem solver with parallel processing capabilities"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
osmpbfreader = "0.16"
geojson = "0.24"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }