[package]
name = "vrp_solver"
version = "0.1.0"
edition = "2021"
description = "A Vehicle Routing Problem solver with parallel processing capabilities"

[[bin]]
name = "vrp-cli"
path = "src/cli_main.rs"

[features]
cli = []

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
osmpbfreader = "0.16"
geojson = "0.24"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Shuttle and Web server dependencies
shuttle-runtime = "0.56"
shuttle-axum = "0.56"
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tempfile = "3.0"
